tests/core/snapshots/test-required-fields.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Foo {
  bar: String!
  id: Int!
}

type Query {
  basicFieldMissing: Foo!
  basicMissing: Foo!
  basicPresent: Foo!
  fullEntryMissing: [Foo!]!
  fullFieldMissing: [Foo!]!
  fullMissing: [Foo!]!
  fullPresent: [Foo!]!
  innerEntryMissing: [Foo!]
  innerFieldMissing: [Foo!]
  innerMissing: [Foo!]
  innerPresent: [Foo!]
  noneEntryMissing: [Foo]
  noneFieldMissing: [Foo]
  noneMissing: [Foo]
  nonePresent: [Foo]
  outerEntryMissing: [Foo]!
  outerFieldMissing: [Foo]!
  outerMissing: [Foo]!
  outerPresent: [Foo]!
  relaxedFieldMissing: Foo
  relaxedMissing: Foo
  relaxedPresent: Foo
}

schema {
  query: Query
}
