tests/core/snapshots/test-response-header-merge.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
  @server(headers: {custom: [{key: "a", value: "a"}, {key: "a", value: "b"}]})
  @upstream
  @link(src: "config-a.yml", type: Config)
  @link(src: "config-b.yml", type: Config) {
  query: Query
}

type Query {
  user: User @expr(body: {name: "John"})
}

type User {
  age: Int
  name: String
}
