tests/core/snapshots/test-response-header-value.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Parsing failed because of failed to parse header value",
    "trace": [
      "schema",
      "@server",
      "headers",
      "custom"
    ],
    "description": null
  }
]
