tests/core/snapshots/test-response-headers-multi.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Parsing failed because of invalid HTTP header name",
    "trace": [
      "schema",
      "@server",
      "headers",
      "custom"
    ],
    "description": null
  },
  {
    "message": "Parsing failed because of failed to parse header value",
    "trace": [
      "schema",
      "@server",
      "headers",
      "custom"
    ],
    "description": null
  },
  {
    "message": "Parsing failed because of invalid HTTP header name",
    "trace": [
      "schema",
      "@server",
      "headers",
      "custom"
    ],
    "description": null
  },
  {
    "message": "Parsing failed because of failed to parse header value",
    "trace": [
      "schema",
      "@server",
      "headers",
      "custom"
    ],
    "description": null
  }
]
