tests/core/snapshots/test-response-headers-name.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Parsing failed because of invalid HTTP header name",
    "trace": [
      "schema",
      "@server",
      "headers",
      "custom"
    ],
    "description": null
  }
]
